--- a/web/templates/user/login.html
+++ b/web/templates/user/login.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <!doctype html>
 
 <html
@@ -136,7 +135,36 @@
                 </div>
                 {% endif %}
                 
-                {{ form.as_p }}
+                <div class="mb-3">
+                  <label for="{{ form.username.id_for_label }}" class="form-label">Email</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="{{ form.username.id_for_label }}"
+                    name="{{ form.username.name }}"
+                    placeholder="Enter your email"
+                    aria-describedby="email"
+                  />
+                </div>
+                <div class="mb-3 form-password-toggle">
+                  <div class="d-flex justify-content-between">
+                    <label class="form-label" for="{{ form.password.id_for_label }}">Password</label>
+                    <a href="#">
+                      <small>Forgot Password?</small>
+                    </a>
+                  </div>
+                  <div class="input-group input-group-merge">
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="{{ form.password.id_for_label }}"
+                      name="{{ form.password.name }}"
+                      placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                      aria-describedby="password"
+                    />
+                    <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                  </div>
+                </div>
                 <div class="mb-8">
                   <div class="d-flex justify-content-between">
                     <div class="form-check mb-0">
@@ -171,10 +199,9 @@
 
     <div class="buy-now">
       <a
-        href="https://themeselection.com/item/sneat-dashboard-pro-bootstrap/"
-        target="_blank"
+        href="{% url 'home' %}"
         class="btn btn-danger btn-buy-now"
-        >Upgrade to Pro</a
+        >Public page</a
       >
     </div>
 
