--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -360,53 +360,37 @@
            <!-- Leveling and Badge System -->
             <li class="menu-header small text-uppercase">
               
-              <span class="menu-header-text">Event Applicants</span>
+              <span class="menu-header-text">Added Reporting Hub</span>
             </li>
             <li class="menu-item">
               <a
-                href="#"
-                target="_blank"
+                href="{% url 'top_organizers' %}"
                 class="menu-link"
               >
               <i class='menu-icon tf-icons bx bxs-bookmark-alt-plus'></i>
-                <div class="text-truncate" data-i18n="Email">Organizer Requests</div>
+                <div class="text-truncate" data-i18n="Email">Top Organizers</div>
                 <div
                   class="badge rounded-pill bg-label-primary text-uppercase fs-tiny ms-auto"
                 >
-                  5
+                  New
                 </div>
               </a>
             </li>
             <li class="menu-item">
               <a
-                href="#"
-                target="_blank"
+                href="{% url 'top_participants' %}"
                 class="menu-link"
               >
                 <i class="menu-icon tf-icons bx bxs-book-add"></i>
-                <div class="text-truncate" data-i18n="Chat">Participant Requests</div>
+                <div class="text-truncate" data-i18n="Chat">Top Participants</div>
                 <div
                   class="badge rounded-pill bg-label-primary text-uppercase fs-tiny ms-auto"
                 >
-                  1
+                  New
                 </div>
               </a>
             </li>
-            <li class="menu-item">
-              <a
-                href=""
-                target="_blank"
-                class="menu-link"
-              >
-                <i class="menu-icon tf-icons bx bxs-add-to-queue"></i>
-                <div class="text-truncate" data-i18n="Leadboard">Attendee requests</div>
-                <div
-                  class="badge rounded-pill bg-label-success text-uppercase fs-tiny ms-auto"
-                >
-                  10
-                </div>
-              </a>
-            </li>
+
             {% endif %}
 
 
